test/regress/DDB54BB8.test
~ Monthly
    Aufwand:Bargeld    0,30€
    Aktiva:Bank:Girokonto  -0,40€

test bal -> 1
__ERROR__
While parsing file "$FILE", line 3:
Unbalanced remainder is:
              -0,10€
Amount to balance against:
               0,30€
While parsing periodic transaction:
> ~ Monthly
>     Aufwand:Bargeld    0,30€
>     Aktiva:Bank:Girokonto  -0,40€
Error: Transaction does not balance
end test

